RESOLVED FIXED 207661
Do not call whenReady callbacks in case of network process crash
https://bugs.webkit.org/show_bug.cgi?id=207661
Summary Do not call whenReady callbacks in case of network process crash
youenn fablet
Reported 2020-02-12 13:46:39 PST
Make sure to not create a ServiceWorkerRegistration when calling whenReady callback in case of network process crash
Attachments
Patch (3.49 KB, patch)
2020-02-12 13:54 PST, youenn fablet
no flags
Patch (3.24 KB, patch)
2020-02-12 16:49 PST, youenn fablet
no flags
Patch (3.17 KB, patch)
2020-02-17 14:38 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-02-12 13:54:15 PST
youenn fablet
Comment 2 2020-02-12 16:49:27 PST
youenn fablet
Comment 3 2020-02-13 12:15:32 PST
Ping review.
Chris Dumez
Comment 4 2020-02-17 12:28:43 PST
Comment on attachment 390590 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390590&action=review > Source/WebCore/workers/service/WorkerSWClientConnection.cpp:-57 > - auto whenRegistrationReadyRequests = WTFMove(m_whenRegistrationReadyRequests); I believe this means the ready promise will never get resolved in this case. Which is unfortunate.
youenn fablet
Comment 5 2020-02-17 14:32:07 PST
(In reply to Chris Dumez from comment #4) > Comment on attachment 390590 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=390590&action=review > > > Source/WebCore/workers/service/WorkerSWClientConnection.cpp:-57 > > - auto whenRegistrationReadyRequests = WTFMove(m_whenRegistrationReadyRequests); > > I believe this means the ready promise will never get resolved in this case. > Which is unfortunate. That is why we are using a Function and not a CompletionHandler. There is no guarantee that it will be ready anytime soon. With or without this patch, if the network process is crashing, we are in a bad position with regards to the ready promise. I will update the patch to clear the function handler.
youenn fablet
Comment 6 2020-02-17 14:38:37 PST
WebKit Commit Bot
Comment 7 2020-02-17 17:59:44 PST
The commit-queue encountered the following flaky tests while processing attachment 390981 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2020-02-17 18:00:02 PST
The commit-queue encountered the following flaky tests while processing attachment 390981 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9 2020-02-17 18:48:27 PST
Comment on attachment 390981 [details] Patch Clearing flags on attachment: 390981 Committed r256805: <https://trac.webkit.org/changeset/256805>
WebKit Commit Bot
Comment 10 2020-02-17 18:48:28 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2020-02-17 18:49:19 PST
Note You need to log in before you can comment on or make changes to this bug.