Do not call whenReady callbacks in case of network process crash https://bugs.webkit.org/show_bug.cgi?id=207661

Reviewed by Chris Dumez.

Source/WebCore:

* workers/service/WorkerSWClientConnection.cpp:
(WebCore::WorkerSWClientConnection::~WorkerSWClientConnection):
The callback is a Function so it is fine not calling it and calling it with a default value is not safe.

Source/WebKit:

* WebProcess/Storage/WebSWClientConnection.cpp:
(WebKit::WebSWClientConnection::clear):
The callback is a Function so it is fine not calling it and calling it with a default value is not safe.


Canonical link: https://commits.webkit.org/220849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256805 268f45cc-cd09-0410-ab3c-d52691b4dbfc